tests/test_inpt_invalid.expected
Error: Expected a number, got 'abc' at line 5
  5 | a = inpt
